--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
 <canvas id="biomeCanvas" width="800" height="600"></canvas>
-<script src="map.js"></script>
+<script src="maps.js"></script>
 </body>
 </html>
